# auto-capture

./: .gitignore  LICENSE  README.md  pyproject.toml
auto_capture/: __init__.py  annotate.py  capture.py  cli.py  config.py  redact.py
tests/: test_annotate.py  test_config.py  test_redact.py
